Changes newAreas csv to predictions

--- a/HomePrice.ipynb
+++ b/HomePrice.ipynb
@@ -254,7 +254,7 @@
    "source": [
     "predictions = reg.predict(d) #Loading all prices into our model\n",
     "d['prices'] = predictions #Making new column for predicted prices\n",
-    "d.to_csv('areasNew.csv', index=False) #exporting to a new csv file."
+    "d.to_csv('predictions.csv', index=False) #exporting to a new csv file."
    ]
   }
  ],
